<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:ellipsize="end"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="32dp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:text="@string/zero"
            android:textSize="80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="6dp"
        android:paddingHorizontal="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            android:onClick="onNumberClick"
            style="@style/Gray.Button"
            android:text="@string/ac"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative"
            style="@style/Gray.Button"
            android:layout_marginHorizontal="18dp"
            android:text="@string/did"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest"
            android:onClick="onOperationClick"
            style="@style/Gray.Button"
            android:layout_marginEnd="18dp"
            android:text="@string/interest"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/division"
            android:onClick="onOperationClick"
            style="@style/Orange.Button"
            android:text="@string/division"/>


    </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/seven"
                style="@style/Black.Button"
                android:text="@string/seven"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                style="@style/Black.Button"
                android:id="@+id/eight"
                android:layout_marginHorizontal="18dp"
                android:text="@string/eight"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                android:onClick="onNumberClick"
                style="@style/Black.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/nine"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/multiply"
                android:text="@string/multiply"/>


        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                style="@style/Black.Button"
                android:id="@+id/four"
                android:text="@string/four"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/five"
                style="@style/Black.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/five"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/six"
                style="@style/Black.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/six"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                android:onClick="onOperationClick"

                style="@style/Orange.Button"
                android:text="@string/minus"/>


        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                android:onClick="onNumberClick"
                style="@style/Black.Button"
                android:text="@string/one"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/two"
                style="@style/Black.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/two"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                android:onClick="onNumberClick"
                style="@style/Black.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/three"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/plus"
                style="@style/Orange.Button"
                android:text="@string/plus"/>


        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Black.Button"
                android:onClick="onNumberClick"
                android:id="@+id/zero"
                android:layout_width="160dp"
                android:paddingEnd="0dp"
                android:paddingStart="32dp"
                android:textAlignment="textStart"
                android:text="@string/zero"
                />

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/comma"
                style="@style/Black.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/comma"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/equals"
                style="@style/Orange.Button"
                android:text="@string/equals"/>
        </LinearLayout>
    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>